@@ -1,3 +1,6 @@
+FusionForge-5.3:
+* Widget: MyArtifacts Enhancement : add monitored artifacts (TrivialDev)
+
 FusionForge-5.2:
 * Docman: inject zip as a tree (Capgemini)
 * Widget: New User Widget: Last 5 documents published in my project (Capgemini)
